Connect to the network and sync time

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,15 @@
 idf_component_register(
-    SRCS
+	SRCS
 		main.cpp
+		network.cpp
 
-    REQUIRES
+	REQUIRES
 		driver
 		espcoredump
 		esp_timer
+		esp_wifi
 		freertos
+		nvs_flash
 )
 
 target_compile_options(
