--- a/src/Kconfig
+++ b/src/Kconfig
@@ -16,7 +16,7 @@ config CLOCKSON_OUTPUT_ACTIVE_LOW
 	bool "Output is active low"
 	default y
 	help
-		Configure whether time signalling carrier is active low or high
+		Configure whether time signalling carrier is active low or high.
 
 config CLOCKSON_UI_LED_BRIGHTNESS
 	int "RGB LED brightness"
@@ -24,5 +24,85 @@ config CLOCKSON_UI_LED_BRIGHTNESS
 	default 8
 	help
 		Configure LED brightness.
+
+choice CLOCKSON_TEST_TIME
+	prompt "Test time signals"
+	default CLOCKSON_TEST_TIME_NONE
+	help
+		Configure a fixed time offset on boot. This has limited effectiveness
+		because the time signal only has 2 digit years so it's open to
+		interpretation by the receiver.
+
+	config CLOCKSON_TEST_TIME_NONE
+		bool "Disabled"
+
+	config CLOCKSON_TEST_TIME_2000_BUG
+		bool "1999-12-31 23:53:50"
+		help
+			Relive the year 2000 bug, starting 5 minutes before midnight.
+
+	config CLOCKSON_TEST_TIME_2000_START
+		bool "2000-01-01 00:00:00"
+		help
+			The year 2000.
+
+	config CLOCKSON_TEST_TIME_2038_BUG
+		bool "2038-01-19 03:07:50"
+		help
+			5 minutes before the year 2038 problem at 2038-01-19 03:14:07 UTC.
+
+	config CLOCKSON_TEST_TIME_TMBG_2082
+		bool "2082-07-18 12:00:00"
+		help
+			What was the look he gave intended to convey?
+			Was there something else he was trying to say?
+			It will all be revealed to you
+			In 2082
+
+	config CLOCKSON_TEST_TIME_2099_END
+		bool "2099-12-31 23:53:50"
+		help
+			5 minutes before the year 2100.
+
+	config CLOCKSON_TEST_TIME_2106_BUG
+		bool "2106-02-07 06:21:50"
+		help
+			5 minutes before the year 2106 problem at 2106-02-07 06:28:15 UTC.
+
+	config CLOCKSON_TEST_TIME_BUSTED_3000
+		bool "3000-01-01 00:00:00"
+		help
+			Not much has changed but they live underwater.
+
+	config CLOCKSON_TEST_TIME_CUSTOM
+		bool "Custom"
+endchoice
+
+if !CLOCKSON_TEST_TIME_CUSTOM
+	config CLOCKSON_TEST_TIME_S
+		int
+		default 946684430 if CLOCKSON_TEST_TIME_2000_BUG
+		default 946684800 if CLOCKSON_TEST_TIME_2000_START
+		default 2147483270 if CLOCKSON_TEST_TIME_2038_BUG
+		default 3551598000 if CLOCKSON_TEST_TIME_TMBG_2082
+		default 4102444430 if CLOCKSON_TEST_TIME_2099_END
+		default 4294966910 if CLOCKSON_TEST_TIME_2106_BUG
+		default 32503680000 if CLOCKSON_TEST_TIME_BUSTED_3000
+endif
+
+if CLOCKSON_TEST_TIME_CUSTOM
+	config CLOCKSON_TEST_TIME_S
+		int "Custom test time value"
+		range 0 18446744073709551615
+		default 0
+		help
+			Fixed time in seconds from the 1970 Unix epoch to use on boot. It
+			isn't possible to use values that are less than the time taken to
+			boot and sync time because that would make the uptime offset
+			negative which isn't supported.
+
+			It takes 60 seconds to transmit the time and multiple complete whole
+			minutes may need to be received to take effect.
+endif
 
 endmenu
